--- a/src/main/resources/reports/PaymentOrder.v.5.jrxml
+++ b/src/main/resources/reports/PaymentOrder.v.5.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.0.final using JasperReports Library version 6.3.0  -->
-<!-- 2017-04-23T17:19:05 -->
+<!-- 2017-04-24T20:24:13 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PO5" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="02787c0f-a9d2-40e5-ac54-a47c5bce23d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="paymentOrderNum" class="java.lang.String">
@@ -119,7 +119,7 @@
 				<staticText>
 					<reportElement x="0" y="-2" width="48" height="30" uuid="3dbacfd2-1f09-4b1c-a003-85b25e98cb48"/>
 					<textElement>
-						<font fontName="Times New Roman" size="10"/>
+						<font fontName="ArialPackageUtf" size="10"/>
 					</textElement>
 					<text><![CDATA[Сумма
 прописью]]></text>
@@ -129,17 +129,6 @@
 				<reportElement x="88" y="121" width="452" height="47" uuid="63f77afc-09ba-4e39-a64a-ae30308c76f7"/>
 				<box>
 					<bottomPen lineWidth="1.0"/>
-				</box>
-			</frame>
-			<frame>
-				<reportElement x="31" y="123" width="57" height="45" uuid="fa214cfa-0db7-4a21-a39c-015346774ea5">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
-				</reportElement>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 			</frame>
 			<frame>
@@ -606,18 +595,23 @@
 					<bottomPen lineWidth="1.0"/>
 				</box>
 				<frame>
-					<reportElement x="60" y="0" width="74" height="38" uuid="8bd17082-f797-45e6-ba2b-71e2a86359dc"/>
+					<reportElement x="60" y="0" width="74" height="40" uuid="8bd17082-f797-45e6-ba2b-71e2a86359dc">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+					</reportElement>
 					<box>
 						<leftPen lineWidth="1.0"/>
 						<rightPen lineWidth="1.0"/>
 					</box>
 					<frame>
-						<reportElement x="0" y="3" width="74" height="12" uuid="8cf28532-7c58-40eb-913a-d4906fd43930"/>
+						<reportElement x="0" y="0" width="74" height="13" uuid="8cf28532-7c58-40eb-913a-d4906fd43930">
+							<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+							<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						</reportElement>
 						<box>
 							<bottomPen lineWidth="1.0"/>
 						</box>
 						<staticText>
-							<reportElement x="10" y="-3" width="50" height="13" uuid="5ebfb4ed-9e81-4156-8f55-17d8fea91d60">
+							<reportElement x="10" y="0" width="50" height="13" uuid="5ebfb4ed-9e81-4156-8f55-17d8fea91d60">
 								<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 								<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 								<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
@@ -630,7 +624,7 @@
 						</staticText>
 					</frame>
 					<staticText>
-						<reportElement x="10" y="15" width="50" height="12" uuid="ca4ae653-26cb-46ec-8af0-ed28c14ba80f">
+						<reportElement x="10" y="13" width="50" height="13" uuid="ca4ae653-26cb-46ec-8af0-ed28c14ba80f">
 							<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 							<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 							<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
@@ -642,7 +636,7 @@
 						<text><![CDATA[Очер. плат.]]></text>
 					</staticText>
 					<staticText>
-						<reportElement x="10" y="27" width="50" height="11" uuid="3b575cd8-44c3-4bcd-983e-c0b436b5183a">
+						<reportElement x="10" y="28" width="50" height="12" uuid="3b575cd8-44c3-4bcd-983e-c0b436b5183a">
 							<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 							<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 							<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
