--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -45,131 +46,148 @@
     <div class="row">
         <!--<div class="col-md-4 col-md-offset-4">-->
         <div class="col-md-6 col-md-offset-3">
-            <form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" >
+            <!--<form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">-->
                 <fieldset>
 
                     <!-- Form Name -->
-                    <legend>Общая информация</legend>
+                    <H3>Общая информация</H3>
+
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="textinput">ИНН:</label>
-                        <div class="col-md-3">
-                            <input type="text" placeholder="ИНН" class="form-control"/>
-                        </div>
-
-                        <label class="col-md-2 control-label" for="textinput">КПП:</label>
-                        <div class="col-md-4">
-                            <input type="text" placeholder="КПП" class="form-control"/>
+                        <label class="col-md-3 control-label">Номер:</label>
+                        <div class="col-md-9">
+                            <input type="text" id="paymentOrderNum" placeholder="Номер поручения" class="form-control" th:field="*{paymentOrderNum}"  />
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Сумма:</label>
+                        <label class="col-md-3 control-label">Сумма:</label>
                         <div class="col-md-9">
-                            <input type="text" id="payerSumQuant" placeholder="Сумма цифрами" class="form-control" name="dtoOrder.payerSumQuant" />
+                            <input type="text" id="payerSumQuant" placeholder="Сумма цифрами" class="form-control" th:field="*{payerSumQuant}"  />
                         </div>
                     </div>
 
                     <br />
                     <!-- Form Name -->
-                    <legend>Реквизиты плательщика</legend>
+                    <H3>Реквизиты плательщика</H3>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="textinput">ИНН:</label>
+                        <label class="col-md-3 control-label">ИНН:</label>
                         <div class="col-md-4">
-                            <input type="text" placeholder="ИНН" class="form-control"/>
+                            <input type="text" id="payerINN" placeholder="ИНН" class="form-control" th:field="*{payerINN}" />
                         </div>
+                    </div>
 
-                        <label class="col-md-2 control-label" for="textinput">КПП:</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" >КПП:</label>
                         <div class="col-md-4">
-                            <input type="text" placeholder="КПП" class="form-control"/>
+                            <input type="text" id="payerKPP" placeholder="КПП" class="form-control" th:field="*{payerKPP}" />
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Плательщик:</label>
+                        <label class="col-md-3 control-label">Плательщик:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="message1" name="message" placeholder="Наименование плательщика" rows="3"></textarea>
+                            <textarea class="form-control" id="payerCompanyName" name="message" placeholder="Наименование плательщика"
+                                      rows="3" th:field="*{payerCompanyName}" ></textarea>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Сч. №:</label>
+                        <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text"  class="form-control"/>
+                            <input type="text" id="payerAccount" class="form-control" th:field="*{payerAccount}"/>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Банк плательщика:</label>
+                        <label class="col-md-3 control-label">Банк плательщика:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="message2" name="message" placeholder="Реквизиты банка получателя" rows="3"></textarea>
+                            <textarea class="form-control" id="payerBankName" name="message" placeholder="Реквизиты банка получателя"
+                                      rows="3" th:field="*{payerBankName}" ></textarea>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">БИК:</label>
+                        <label class="col-md-3 control-label">БИК:</label>
                         <div class="col-md-9">
-                            <input type="text" placeholder="БИК" class="form-control"/>
+                            <input type="text" placeholder="БИК" id="payerBankBIK" class="form-control" th:field="*{payerBankBIK}"/>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Сч. №:</label>
+                        <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text"  class="form-control"/>
+                            <input type="text" id="payerBankAccount" class="form-control" th:field="*{payerBankAccount}" />
                         </div>
                     </div>
 
                     <br/>
                     <!-- Form Name -->
-                    <legend>Реквизиты получателя</legend>
+                    <H3>Реквизиты получателя</H3>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-3 control-label">ИНН:</label>
+                        <div class="col-md-4">
+                            <input type="text" id="recipientINN" placeholder="ИНН" class="form-control" th:field="*{recipientINN}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label">КПП:</label>
+                        <div class="col-md-4">
+                            <input type="text" id="recipientKPP" placeholder="КПП" class="form-control" th:field="*{recipientKPP}"/>
+                        </div>
+                    </div>
 
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Плательщик:</label>
+                        <label class="col-md-3 control-label">Плательщик:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="message1" name="message" placeholder="Наименование плательщика" rows="3"></textarea>
+                            <textarea class="form-control" id="recipientCompanyName" name="message" placeholder="Наименование плательщика"
+                                      rows="3" th:field="*{recipientCompanyName}"></textarea>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Сч. №:</label>
+                        <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text"  class="form-control"/>
+                            <input type="text" id="recipientAccount" class="form-control" th:field="*{recipientAccount}"/>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Банк плательщика:</label>
+                        <label class="col-md-3 control-label">Банк плательщика:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="message2" name="message" placeholder="Реквизиты банка получателя" rows="3"></textarea>
+                            <textarea class="form-control" id="recipientBankName" name="message" placeholder="Реквизиты банка получателя"
+                                      rows="3" th:field="*{recipientBankName}"></textarea>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">БИК:</label>
+                        <label class="col-md-3 control-label">БИК:</label>
                         <div class="col-md-9">
-                            <input type="text" placeholder="БИК" class="form-control"/>
+                            <input type="text" id="recipientBankBIK" placeholder="БИК" class="form-control" th:field="*{recipientBankBIK}"/>
                         </div>
                     </div>
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="textinput">Сч. №:</label>
+                        <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-sm-9">
-                            <input type="text"  class="form-control"/>
+                            <input type="text" id="recipientBankAccount" class="form-control" th:field="*{recipientBankAccount}"/>
                         </div>
                     </div>
 
@@ -177,7 +195,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-9">
                             <div class="pull-right">
-                                <button type="submit" class="btn btn-primary">Заполнить  тестовыми  данными</button>
+                                <button id="fillTestData" class="btn btn-primary">Заполнить  тестовыми  данными</button>
                                 <button type="submit" class="btn btn-primary">Получить PDF</button>
                             </div>
                         </div>
@@ -187,53 +205,13 @@
             </form>
         </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
-
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="well well-sm">
-                    <form class="form-horizontal" action="" method="post">
-                        <fieldset>
-                            <legend class="text-center">Contact us</legend>
-
-                            <!-- Name input-->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="name">Name</label>
-                                <div class="col-md-9">
-                                    <input id="name" name="name" type="text" placeholder="Your name" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <!-- Email input-->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="email">Your E-mail</label>
-                                <div class="col-md-9">
-                                    <input id="email" name="email" type="text" placeholder="Your email" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <!-- Message body -->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="message">Your message</label>
-                                <div class="col-md-9">
-                                    <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
-                                </div>
-                            </div>
-
-                            <!-- Form actions -->
-                            <div class="form-group">
-                                <div class="col-md-12 text-right">
-                                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="./dist/js/bootstrap.min.js"></script>
+<script src="./js/jquery-3.2.1.min.js" type="application/javascript"></script>
+<script src="./js/custom.js" type="application/javascript"></script>
+<!--<script src="./js/jquery.mask.js" type="application/javascript"></script>-->
+<script src="./js/jquery.maskedinput.js" type="application/javascript"></script>
 </body>
 </html>
